# -- Packaging --------------------------------------
[metadata]
description-file = README.md

# -- Code quality ------------------------------------

[pylint.MASTER]
ignore = resources.py
jobs = 2
suggestion-mode = yes
extension-pkg-whitelist = PyQt5

[pylint.MESSAGES CONTROL]
disable = missing-module-docstring,
          missing-class-docstring,
          missing-function-docstring,
          consider-using-f-string,
          broad-except

[pylint.FORMAT]
max-line-length = 120
ignore-long-lines = ^\s*(# )?<?https?://\S+>?$|^\s*(\w+\.?)+\[[\w\.'"éè\s]+\]\s?=\s?{([\w\.'"éè\s]+\s?:\s?\w+)\s?,\s?

[pylint.TYPECHECK]
ignored-modules = qgis.core, qgis.gui

[pylint.BASIC]
variable-naming-style = camelCase
function-naming-style = camelCase
argument-naming-style = camelCase
class-naming-style = PascalCase
class-attribute-naming-style = camelCase
attr-naming-style = camelCase
method-naming-style = camelCase
const-naming-style = UPPER_CASE
module-naming-style = camelCase
good-names = x, y, i, j, e, _

[isort]
ensure_newline_before_comments = True
force_grid_wrap = 4
include_trailing_comma = True
multi_line_output = 3
profile = black
use_parentheses = True

# -- Tests ----------------------------------------------

# CONFIGURATION MOVED TO pytest.ini: the pylint parser is unable to parse log_cli_format string because of the %
#[tool:pytest]
# log_cli = true
# log_cli_level = INFO
# log_cli_format=%(asctime)s - %(levelname)s - %(filename)s:%(lineno)d - %(message)s
# log_cli_date_format=%d-%b-%y %H:%M:%S

# log_level = INFO
# log_format=%(asctime)s - %(levelname)s - %(filename)s:%(lineno)d - %(message)s
# log_date_format=%d-%b-%y %H:%M:%S

# addopts =
#     --cov-config=setup.cfg
#     --cov=TOMsPlugin
#     --ignore=tests/_wip/
# norecursedirs = .* build dev development dist docs CVS fixtures _darcs {arch} *.egg venv _wip
# python_files = test*.py
# testpaths = tests

[coverage:run]
branch = True
omit =
    venv/*
    .venv/*
    *tests*

[coverage:report]
ignore_errors = True
show_missing = True
exclude_lines =
    if self.debug:
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:


# -- SQL ----------------------------------------------
[sqlfluff]
#templater = jinja
dialect = postgres
sql_file_exts = .sql,.sql.j2,.dml,.ddl
exclude_rules = L046,L059,L003,L017

[sqlfluff:rules]
tab_space_size = 4
max_line_length = 120
indent_unit = space
comma_style = trailing
allow_scalar = True
single_table_references = consistent
unquoted_identifiers_policy = all

[sqlfluff:indentation]
indented_joins = false
indented_using_on = true
template_blocks_indent = false

[sqlfluff:templater]
unwrap_wrapped_queries = true

# [sqlfluff:templater:jinja]
# apply_dbt_builtins = true

[sqlfluff:rules:L010]
# Keywords
capitalisation_policy = upper
